k3s-cloud/persist-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: persist-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: persist-worker
  template:
    metadata:
      labels:
        app: persist-worker
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: persist-worker
        image: 492832370104.dkr.ecr.us-east-1.amazonaws.com/chatroom-persist-worker:latest
        resources:
          requests:
            memory: "160Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
