k3s-cloud/api-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      nodeSelector:
        workload: apps
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: api-server
        image: 492832370104.dkr.ecr.us-east-1.amazonaws.com/chatroom-api-server:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "320Mi"
            cpu: "500m"
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 45
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: api-server
spec:
  selector:
    app: api-server
  ports:
  - port: 8080
