k3s-cloud/kafka.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:7.6.1
        ports:
        - containerPort: 9092
        - containerPort: 9093
        volumeMounts:
        - name: kafka-data
          mountPath: /var/lib/kafka/data
        resources:
          requests:
            memory: "300Mi"
            cpu: "200m"
          limits:
            memory: "400Mi"
            cpu: "500m"
        startupProbe:
          tcpSocket:
            port: 9092
          periodSeconds: 5
          failureThreshold: 36
        readinessProbe:
          tcpSocket:
            port: 9092
          periodSeconds: 5
          failureThreshold: 3
      volumes:
      - name: kafka-data
        hostPath:
          path: /data/kafka
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: kafka
  ports:
  - name: broker
    port: 9092
  - name: controller
    port: 9093
