k3s-cloud/ws-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws-server
  template:
    metadata:
      labels:
        app: ws-server
    spec:
      terminationGracePeriodSeconds: 30
      nodeSelector:
        workload: apps
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: ws-server
        image: 492832370104.dkr.ecr.us-east-1.amazonaws.com/chatroom-ws-server:latest
        ports:
        - containerPort: 8081
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "320Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: ws-server
spec:
  selector:
    app: ws-server
  ports:
  - port: 8081
